Start rebuild as 11ty

--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "lewismorris.github.io",
+  "name": "lewismorris.co.uk",
   "version": "1.0.0",
-  "description": "lewismorris.github.io",
+  "description": "Personal Website",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/gulp build"
+    "dev": "eleventy --watch --serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lewismorris/lewismorris.co.uk.git"
   },
   "author": "Lewis Morris <lewis@lewismorris.co.uk>",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lewismorris/lewismorris.co.uk/issues"
+  },
+  "homepage": "https://github.com/lewismorris/lewismorris.co.uk#readme",
+  "dependencies": {
+    "@11ty/eleventy": "^0.10.0"
+  },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-sass": "^3.1.0"
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0"
   }
 }
